lesson_31/frontend.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: coffee
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: coffee
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: web
              mountPath: /usr/share/nginx/html
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          resources:
            requests:
              cpu: 25m
              memory: 32Mi
            limits:
              cpu: 150m
              memory: 96Mi
      volumes:
        - name: web
          configMap:
            name: frontend-content

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: coffee
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
  type: ClusterIP
